--- a/multimodal-ai-chatbot-AI-backend/Pardus.ipynb
+++ b/multimodal-ai-chatbot-AI-backend/Pardus.ipynb
@@ -172,7 +172,7 @@
     "\n",
     "# 3. Google Gemma Modelini Yükle (Text & Vision)\n",
     "print(\"Google Gemma modeli yükleniyor...\")\n",
-    "gemma_model_id = \"D:\\\\ImageToText\\\\gemma-3-4b-it\"\n",
+    "gemma_model_id = \"model yolu\"\n",
     "gemma_model = Gemma3ForConditionalGeneration.from_pretrained(\n",
     "    gemma_model_id, device_map=\"auto\"\n",
     ").eval()\n",
